--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,14 @@ after_success:
   - docker push beingjd/docker-server
   - docker push beingjd/docker-worker
 
-deploy:
-  provider: elasticbeanstalk
-  region: ap-south-1
-  app: multi-docker
-  env: MultiDocker-env
-  bucket_name: elasticbeanstalk-ap-south-1-583044482327
-  bucket_path: docker-multi
-  on:
-    branch: master
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
+# deploy:
+#   provider: elasticbeanstalk
+#   region: ap-south-1
+#   app: multi-docker
+#   env: MultiDocker-env
+#   bucket_name: elasticbeanstalk-ap-south-1-583044482327
+#   bucket_path: docker-multi
+#   on:
+#     branch: master
+#   access_key_id: $AWS_ACCESS_KEY
+#   secret_access_key: $AWS_SECRET_KEY
